--- a/config/sync/node.type.innovation_tracker_issue.yml
+++ b/config/sync/node.type.innovation_tracker_issue.yml
@@ -6,8 +6,9 @@ dependencies:
     - menu_ui
 third_party_settings:
   menu_ui:
-    available_menus: {  }
-    parent: ''
+    available_menus:
+      - mega-menu
+    parent: 'mega-menu:menu_link_content:6c564a7c-3692-4728-986b-1f1f248bd4ef'
 name: 'Innovation Tracker Issue'
 type: innovation_tracker_issue
 description: 'Issues of the Innovation Tracker'
