--- a/config/sync/core.entity_form_display.node.innovation_tracker_issue.default.yml
+++ b/config/sync/core.entity_form_display.node.innovation_tracker_issue.default.yml
@@ -17,6 +17,7 @@ dependencies:
     - block_field
     - datetime
     - entity_browser
+    - entity_browser_entity_form
     - field_group
     - field_layout
     - inline_entity_form
@@ -115,13 +116,19 @@ content:
     weight: 13
     settings:
       form_mode: default
-      override_labels: false
-      label_singular: ''
-      label_plural: ''
+      override_labels: true
+      label_singular: 'Hub update'
+      label_plural: 'Hub updates'
+      allow_new: true
+      match_operator: CONTAINS
       collapsible: false
       collapsed: false
-    third_party_settings: {  }
-    type: inline_entity_form_simple
+      allow_existing: false
+      allow_duplicate: false
+    third_party_settings:
+      entity_browser_entity_form:
+        entity_browser_id: _none
+    type: inline_entity_form_complex
     region: content
   field_innovation_tracker_story:
     type: entity_reference_paragraphs
