--- a/config/sync/core.entity_view_display.node.innovation_tracker_story.search_result.yml
+++ b/config/sync/core.entity_view_display.node.innovation_tracker_story.search_result.yml
@@ -60,19 +60,27 @@ third_party_settings:
             add_region_classes: 1
             attributes: ''
     regions:
+      top:
+        - node_title
       left:
         - group_image
         - field_media_image
         - field_caption
       right:
         - body
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
   field_group:
     group_image:
       children:
         - field_media_image
         - field_caption
       parent_name: ''
-      weight: 0
+      weight: 1
       format_type: html_element
       format_settings:
         id: ''
@@ -94,7 +102,7 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     region: right
