--- a/config/sync/field.field.paragraph.innovation_tracker_stories.field_title.yml
+++ b/config/sync/field.field.paragraph.innovation_tracker_stories.field_title.yml
@@ -15,8 +15,8 @@ id: paragraph.innovation_tracker_stories.field_title
 field_name: field_title
 entity_type: paragraph
 bundle: innovation_tracker_stories
-label: Title
-description: ''
+label: 'Section header'
+description: 'A heading for grouping stories on the same subject'
 required: true
 translatable: true
 default_value: {  }
