--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -32,6 +32,8 @@ module:
   comment: 0
   components: 0
   config: 0
+  config_filter: 0
+  config_ignore: 0
   config_translation: 0
   config_update: 0
   contact: 0
