--- a/config/sync/config_ignore.settings.yml
+++ b/config/sync/config_ignore.settings.yml
@@ -1,5 +1,5 @@
 ignored_config_entities:
-  - block.block.innovationtrackerheader.yml
-  - ipu_innovation_tracker.contribute.yml
+  - ipu_innovation_tracker.contribute
+  - block.block.innovationtrackerheader
 _core:
   default_config_hash: UVH1aJ4b44UM-VdPVN7hNNuuVqfReJxwfVeDQH1Hvsk
