--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "drupal/bootstrap_layouts": "^5.1",
         "drupal/bootstrap_sass": "^1.9",
         "drupal/bootstrap_simple_carousel": "^1.2",
-        "drupal/captcha": "^1.0@beta",
+        "drupal/captcha": "^1.0",
         "drupal/chosen": "^2.7",
         "drupal/coffee": "^1.0@beta",
         "drupal/colorbox": "^1.4",
@@ -48,7 +48,7 @@
         "drupal/context_active_trail": "^1.0@RC",
         "drupal/convert_bundles": "^1.0@alpha",
         "drupal/convert_media_tags_to_markup": "^1.0@beta",
-        "drupal/core": "^8.7",
+        "drupal/core": "8.7.13",
         "drupal/csv_serialization": "^1.4",
         "drupal/ctools": "^3.2",
         "drupal/custom_add_another": "^1.0@beta",
@@ -58,7 +58,7 @@
         "drupal/devel": "^2.1",
         "drupal/devel_debug_log": "1.x-dev",
         "drupal/ds": "^3.3",
-        "drupal/editor_advanced_link": "^1.4",
+        "drupal/editor_advanced_link": "^1.6",
         "drupal/entity_embed": "^1.0@beta",
         "drupal/entity_reference_revisions": "^1.6",
         "drupal/entityqueue": "^1.0@beta",
@@ -76,8 +76,8 @@
         "drupal/flickr": "^1.0@alpha",
         "drupal/flickr_block": "^1.0@alpha",
         "drupal/flickr_colorbox": "^1.0@alpha",
-        "drupal/geocoder": "^2.1",
-        "drupal/geofield": "^1.3",
+        "drupal/geocoder": "^2.12",
+        "drupal/geofield": "^1.12",
         "drupal/geolocation": "^1.11",
         "drupal/geophp": "^1.0@beta",
         "drupal/google_analytics": "^3.0",
@@ -125,7 +125,7 @@
         "drupal/similarterms": "^1.3",
         "drupal/site_status_message": "^1.0@RC",
         "drupal/sitemap": "^1.5",
-        "drupal/smart_trim": "^1.1",
+        "drupal/smart_trim": "^1.2",
         "drupal/stage_file_proxy": "^1.0@beta",
         "drupal/taxonomy_menu": "^3.4",
         "drupal/text_resize": "^1.1",
@@ -135,7 +135,7 @@
         "drupal/twitter_block": "^2.1",
         "drupal/ultimenu": "^2.0",
         "drupal/video_embed_field": "^2.2",
-        "drupal/viewfield": "^3.0@alpha",
+        "drupal/viewfield": "3.0-beta5",
         "drupal/views_bootstrap": "^4.1",
         "drupal/views_bulk_operations": "^2.5",
         "drupal/views_data_export": "^1.0@beta",
@@ -147,7 +147,7 @@
         "egulias/email-validator": "^2.0",
         "platformsh/config-reader": "^2.2",
         "vlucas/phpdotenv": "^2.4",
-        "webflo/drupal-core-require-dev": "^8.7",
+        "webflo/drupal-core-require-dev": "8.7.13",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^1.4",
@@ -208,7 +208,6 @@
         },
         "patches": {
             "drupal/core": {
-                "IPU: Entity load null assert breaks paragraph add ajax See issue 3035980": "web/patches/ipu_entity_load_null_assert-3035980.patch",
                 "Ignore width height on untranslatable field": "https://www.drupal.org/files/issues/2019-02-11/ignore_width_height_on_untranslatable_field_comparision_2941092_8.patch",
                 "Path alias filter by system path": "https://www.drupal.org/files/issues/2018-03-24/path_alias_filter_by-2418755-69.patch",
                 "Term route context": "https://www.drupal.org/files/issues/2019-04-12/term_route_context-2998826-31.patch",
