Add innovation tracker content types to node picker fields on Highlights and Slide paragraphs.

--- a/config/sync/field.field.paragraph.highlights.field_node.yml
+++ b/config/sync/field.field.paragraph.highlights.field_node.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.paragraph.field_node
     - node.type.article
     - node.type.basic_page
+    - node.type.innovation_tracker_issue
     - node.type.ipu_event
     - node.type.landing_page
     - node.type.page
@@ -35,6 +36,7 @@ settings:
     target_bundles:
       basic_page: basic_page
       ipu_event: ipu_event
+      innovation_tracker_issue: innovation_tracker_issue
       landing_page: landing_page
       article: article
       page: page
