--- a/config/sync/core.entity_form_display.node.report.default.yml
+++ b/config/sync/core.entity_form_display.node.report.default.yml
@@ -6,18 +6,80 @@ dependencies:
     - field.field.node.report.body
     - field.field.node.report.field_image
     - field.field.node.report.field_nodes
+    - field.field.node.report.field_section
     - image.style.thumbnail
     - node.type.report
   module:
+    - field_group
     - field_layout
     - image
     - layout_discovery
+    - paragraphs
     - path
     - text
 third_party_settings:
   field_layout:
     id: layout_onecol
     settings: {  }
+  field_group:
+    group_front_page:
+      children:
+        - title
+        - body
+        - field_image
+      parent_name: group_pages
+      weight: 1
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+        formatter: closed
+      label: 'Front page'
+      region: content
+    group_pages:
+      children:
+        - group_front_page
+        - group_content_pages
+        - group_back_page
+      parent_name: ''
+      weight: 0
+      format_type: tabs
+      format_settings:
+        direction: horizontal
+        id: ''
+        classes: ''
+      label: Pages
+      region: content
+    group_back_page:
+      children:
+        - field_section
+      parent_name: group_pages
+      weight: 3
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Back page'
+      region: content
+    group_content_pages:
+      children:
+        - field_nodes
+      parent_name: group_pages
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Content pages'
+      region: content
 id: node.report.default
 targetEntityType: node
 bundle: report
@@ -25,7 +87,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 1
+    weight: 2
     settings:
       rows: 9
       summary_rows: 3
@@ -39,7 +101,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_image:
-    weight: 2
+    weight: 3
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -47,13 +109,25 @@ content:
     type: image_image
     region: content
   field_nodes:
-    weight: 3
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_section:
+    weight: 13
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    type: entity_reference_paragraphs
     region: content
   langcode:
     type: language_select
@@ -91,7 +165,7 @@ content:
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: 1
     region: content
     settings:
       size: 60
