--- a/config/sync/core.entity_form_display.node.report.default.yml
+++ b/config/sync/core.entity_form_display.node.report.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.report.body
     - field.field.node.report.field_image
     - field.field.node.report.field_nodes
+    - field.field.node.report.field_publication_link
     - field.field.node.report.field_section
     - image.style.thumbnail
     - node.type.report
@@ -14,6 +15,7 @@ dependencies:
     - field_layout
     - image
     - layout_discovery
+    - link
     - paragraphs
     - path
     - text
@@ -26,6 +28,7 @@ third_party_settings:
       children:
         - title
         - body
+        - field_publication_link
         - field_image
       parent_name: group_pages
       weight: 1
@@ -96,12 +99,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_image:
-    weight: 3
+    weight: 4
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -117,6 +120,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_publication_link:
+    weight: 3
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
   field_section:
     weight: 13
     settings:
@@ -131,14 +142,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 4
+    weight: 2
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -146,21 +157,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 6
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 12
+    weight: 10
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 7
     region: content
     third_party_settings: {  }
   title:
@@ -172,13 +183,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 7
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
@@ -186,7 +197,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 11
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
