--- a/config/sync/core.entity_view_display.node.report.default.yml
+++ b/config/sync/core.entity_view_display.node.report.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.report.body
     - field.field.node.report.field_image
     - field.field.node.report.field_nodes
+    - field.field.node.report.field_publication_link
     - field.field.node.report.field_section
     - image.style.max_1920x1920
     - node.type.report
@@ -13,6 +14,7 @@ dependencies:
     - ds
     - entity_reference_revisions
     - image
+    - link
     - text
     - user
 id: node.report.default
@@ -23,12 +25,12 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
   field_image:
-    weight: 103
+    weight: 3
     label: hidden
     settings:
       image_style: max_1920x1920
@@ -43,7 +45,7 @@ content:
     type: image_url
     region: content
   field_nodes:
-    weight: 102
+    weight: 2
     label: above
     settings:
       link: true
@@ -58,8 +60,20 @@ content:
             classes: {  }
     type: entity_reference_label
     region: content
+  field_publication_link:
+    weight: 4
+    label: hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+    region: content
   field_section:
-    weight: 104
+    weight: 5
     label: above
     settings:
       view_mode: default
@@ -68,7 +82,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   links:
-    weight: 100
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
