--- a/web/themes/custom/ipu_report/ipu_report.info.yml
+++ b/web/themes/custom/ipu_report/ipu_report.info.yml
@@ -35,7 +35,7 @@ regions:
 #  footer_second: 'Footer second'
 #  footer_third: 'Footer third'
 #  footer_fourth: 'Footer fourth'
-#  footer_fifth: 'Footer fifth'
+  footer_fifth: 'Footer fifth'
 
 # Information added by Drupal.org packaging script on 2019-02-25
 version: '8.x-1.0'
