Complete publication link translation, translate report section types and use key instead of value to styling.

--- a/config/sync/field.storage.paragraph.field_content_type.yml
+++ b/config/sync/field.storage.paragraph.field_content_type.yml
@@ -25,7 +25,7 @@ settings:
       label: 'Case study'
     -
       value: impact
-      label: 'Impact statement'
+      label: 'Our impact'
     -
       value: next_steps
       label: 'Next steps'
