Add report to content types pickable by links in carousel and slide paragraphs.

--- a/config/sync/field.field.paragraph.slide.field_node.yml
+++ b/config/sync/field.field.paragraph.slide.field_node.yml
@@ -12,6 +12,7 @@ dependencies:
     - node.type.landing_page
     - node.type.page
     - node.type.publication
+    - node.type.report
     - node.type.section_page
     - node.type.vacancy
     - paragraphs.paragraphs_type.slide
@@ -43,6 +44,7 @@ settings:
       article: article
       page: page
       publication: publication
+      report: report
       section_page: section_page
       vacancy: vacancy
     sort:
