Update upcoming events to display events > -3 days

--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -1465,6 +1465,24 @@ display:
         - 'config:core.entity_view_display.node.event.full'
         - 'config:core.entity_view_display.node.event.highlight'
         - 'config:core.entity_view_display.node.event.teaser'
+        - 'config:core.entity_view_display.node.hub_update.default'
+        - 'config:core.entity_view_display.node.hub_update.full'
+        - 'config:core.entity_view_display.node.hub_update.highlight'
+        - 'config:core.entity_view_display.node.hub_update.search_index'
+        - 'config:core.entity_view_display.node.hub_update.search_result'
+        - 'config:core.entity_view_display.node.hub_update.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.teaser'
         - 'config:core.entity_view_display.node.ipu_event.default'
         - 'config:core.entity_view_display.node.ipu_event.full'
         - 'config:core.entity_view_display.node.ipu_event.highlight'
@@ -1481,6 +1499,10 @@ display:
         - 'config:core.entity_view_display.node.publication.default'
         - 'config:core.entity_view_display.node.publication.highlight'
         - 'config:core.entity_view_display.node.publication.teaser'
+        - 'config:core.entity_view_display.node.report.default'
+        - 'config:core.entity_view_display.node.report.teaser'
+        - 'config:core.entity_view_display.node.report_section.default'
+        - 'config:core.entity_view_display.node.report_section.teaser'
         - 'config:core.entity_view_display.node.section_page.default'
         - 'config:core.entity_view_display.node.section_page.highlight'
         - 'config:core.entity_view_display.node.section_page.slide'
@@ -2564,6 +2586,24 @@ display:
         - 'config:core.entity_view_display.node.event.full'
         - 'config:core.entity_view_display.node.event.highlight'
         - 'config:core.entity_view_display.node.event.teaser'
+        - 'config:core.entity_view_display.node.hub_update.default'
+        - 'config:core.entity_view_display.node.hub_update.full'
+        - 'config:core.entity_view_display.node.hub_update.highlight'
+        - 'config:core.entity_view_display.node.hub_update.search_index'
+        - 'config:core.entity_view_display.node.hub_update.search_result'
+        - 'config:core.entity_view_display.node.hub_update.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.teaser'
         - 'config:core.entity_view_display.node.ipu_event.default'
         - 'config:core.entity_view_display.node.ipu_event.full'
         - 'config:core.entity_view_display.node.ipu_event.highlight'
@@ -2580,6 +2620,10 @@ display:
         - 'config:core.entity_view_display.node.publication.default'
         - 'config:core.entity_view_display.node.publication.highlight'
         - 'config:core.entity_view_display.node.publication.teaser'
+        - 'config:core.entity_view_display.node.report.default'
+        - 'config:core.entity_view_display.node.report.teaser'
+        - 'config:core.entity_view_display.node.report_section.default'
+        - 'config:core.entity_view_display.node.report_section.teaser'
         - 'config:core.entity_view_display.node.section_page.default'
         - 'config:core.entity_view_display.node.section_page.highlight'
         - 'config:core.entity_view_display.node.section_page.slide'
@@ -3570,6 +3614,24 @@ display:
         - 'config:core.entity_view_display.node.event.full'
         - 'config:core.entity_view_display.node.event.highlight'
         - 'config:core.entity_view_display.node.event.teaser'
+        - 'config:core.entity_view_display.node.hub_update.default'
+        - 'config:core.entity_view_display.node.hub_update.full'
+        - 'config:core.entity_view_display.node.hub_update.highlight'
+        - 'config:core.entity_view_display.node.hub_update.search_index'
+        - 'config:core.entity_view_display.node.hub_update.search_result'
+        - 'config:core.entity_view_display.node.hub_update.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.teaser'
         - 'config:core.entity_view_display.node.ipu_event.default'
         - 'config:core.entity_view_display.node.ipu_event.full'
         - 'config:core.entity_view_display.node.ipu_event.highlight'
@@ -3586,6 +3648,10 @@ display:
         - 'config:core.entity_view_display.node.publication.default'
         - 'config:core.entity_view_display.node.publication.highlight'
         - 'config:core.entity_view_display.node.publication.teaser'
+        - 'config:core.entity_view_display.node.report.default'
+        - 'config:core.entity_view_display.node.report.teaser'
+        - 'config:core.entity_view_display.node.report_section.default'
+        - 'config:core.entity_view_display.node.report_section.teaser'
         - 'config:core.entity_view_display.node.section_page.default'
         - 'config:core.entity_view_display.node.section_page.highlight'
         - 'config:core.entity_view_display.node.section_page.slide'
@@ -3861,7 +3927,7 @@ display:
           value:
             min: ''
             max: ''
-            value: '-1 day'
+            value: '-3 days'
             type: offset
           group: 1
           exposed: false
@@ -4515,6 +4581,24 @@ display:
         - 'config:core.entity_view_display.node.event.full'
         - 'config:core.entity_view_display.node.event.highlight'
         - 'config:core.entity_view_display.node.event.teaser'
+        - 'config:core.entity_view_display.node.hub_update.default'
+        - 'config:core.entity_view_display.node.hub_update.full'
+        - 'config:core.entity_view_display.node.hub_update.highlight'
+        - 'config:core.entity_view_display.node.hub_update.search_index'
+        - 'config:core.entity_view_display.node.hub_update.search_result'
+        - 'config:core.entity_view_display.node.hub_update.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.teaser'
         - 'config:core.entity_view_display.node.ipu_event.default'
         - 'config:core.entity_view_display.node.ipu_event.full'
         - 'config:core.entity_view_display.node.ipu_event.highlight'
@@ -4531,6 +4615,10 @@ display:
         - 'config:core.entity_view_display.node.publication.default'
         - 'config:core.entity_view_display.node.publication.highlight'
         - 'config:core.entity_view_display.node.publication.teaser'
+        - 'config:core.entity_view_display.node.report.default'
+        - 'config:core.entity_view_display.node.report.teaser'
+        - 'config:core.entity_view_display.node.report_section.default'
+        - 'config:core.entity_view_display.node.report_section.teaser'
         - 'config:core.entity_view_display.node.section_page.default'
         - 'config:core.entity_view_display.node.section_page.highlight'
         - 'config:core.entity_view_display.node.section_page.slide'
@@ -5807,6 +5895,24 @@ display:
         - 'config:core.entity_view_display.node.event.full'
         - 'config:core.entity_view_display.node.event.highlight'
         - 'config:core.entity_view_display.node.event.teaser'
+        - 'config:core.entity_view_display.node.hub_update.default'
+        - 'config:core.entity_view_display.node.hub_update.full'
+        - 'config:core.entity_view_display.node.hub_update.highlight'
+        - 'config:core.entity_view_display.node.hub_update.search_index'
+        - 'config:core.entity_view_display.node.hub_update.search_result'
+        - 'config:core.entity_view_display.node.hub_update.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.teaser'
         - 'config:core.entity_view_display.node.ipu_event.default'
         - 'config:core.entity_view_display.node.ipu_event.full'
         - 'config:core.entity_view_display.node.ipu_event.highlight'
@@ -5823,6 +5929,10 @@ display:
         - 'config:core.entity_view_display.node.publication.default'
         - 'config:core.entity_view_display.node.publication.highlight'
         - 'config:core.entity_view_display.node.publication.teaser'
+        - 'config:core.entity_view_display.node.report.default'
+        - 'config:core.entity_view_display.node.report.teaser'
+        - 'config:core.entity_view_display.node.report_section.default'
+        - 'config:core.entity_view_display.node.report_section.teaser'
         - 'config:core.entity_view_display.node.section_page.default'
         - 'config:core.entity_view_display.node.section_page.highlight'
         - 'config:core.entity_view_display.node.section_page.slide'
@@ -6853,6 +6963,24 @@ display:
         - 'config:core.entity_view_display.node.event.full'
         - 'config:core.entity_view_display.node.event.highlight'
         - 'config:core.entity_view_display.node.event.teaser'
+        - 'config:core.entity_view_display.node.hub_update.default'
+        - 'config:core.entity_view_display.node.hub_update.full'
+        - 'config:core.entity_view_display.node.hub_update.highlight'
+        - 'config:core.entity_view_display.node.hub_update.search_index'
+        - 'config:core.entity_view_display.node.hub_update.search_result'
+        - 'config:core.entity_view_display.node.hub_update.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_issue.teaser'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.default'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.full'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.highlight'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_index'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.search_result'
+        - 'config:core.entity_view_display.node.innovation_tracker_story.teaser'
         - 'config:core.entity_view_display.node.ipu_event.default'
         - 'config:core.entity_view_display.node.ipu_event.full'
         - 'config:core.entity_view_display.node.ipu_event.highlight'
@@ -6869,6 +6997,10 @@ display:
         - 'config:core.entity_view_display.node.publication.default'
         - 'config:core.entity_view_display.node.publication.highlight'
         - 'config:core.entity_view_display.node.publication.teaser'
+        - 'config:core.entity_view_display.node.report.default'
+        - 'config:core.entity_view_display.node.report.teaser'
+        - 'config:core.entity_view_display.node.report_section.default'
+        - 'config:core.entity_view_display.node.report_section.teaser'
         - 'config:core.entity_view_display.node.section_page.default'
         - 'config:core.entity_view_display.node.section_page.highlight'
         - 'config:core.entity_view_display.node.section_page.slide'
