--- a/config/sync/core.entity_form_display.taxonomy_term.country.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.country.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.country.field_flag_url
     - field.field.taxonomy_term.country.field_geographic_region
     - field.field.taxonomy_term.country.field_geopolitical_group
     - field.field.taxonomy_term.country.field_hr_cases_document
@@ -18,6 +19,7 @@ dependencies:
     - field_group
     - field_layout
     - layout_discovery
+    - link
     - path
     - text
 third_party_settings:
@@ -30,7 +32,7 @@ third_party_settings:
         - field_human_rights_cases
         - field_hr_cases_document
       parent_name: ''
-      weight: 6
+      weight: 7
       format_type: fieldset
       format_settings:
         id: ''
@@ -52,14 +54,22 @@ content:
       rows: 3
       placeholder: ''
     third_party_settings: {  }
+  field_flag_url:
+    weight: 4
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
   field_geographic_region:
-    weight: 11
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_geopolitical_group:
-    weight: 10
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
@@ -81,7 +91,7 @@ content:
     type: number
     region: content
   field_ipu_member:
-    weight: 5
+    weight: 6
     type: boolean_checkbox
     settings:
       display_label: true
@@ -104,14 +114,14 @@ content:
     type: string_textfield
     region: content
   field_no_parliament_page:
-    weight: 14
+    weight: 13
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_principles_signatory:
-    weight: 9
+    weight: 8
     settings:
       display_label: true
     third_party_settings: {  }
@@ -119,7 +129,7 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 4
+    weight: 5
     region: content
     settings:
       include_locked: true
@@ -134,12 +144,12 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 12
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   translation:
-    weight: 13
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
