--- a/config/sync/core.entity_view_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.landing_page.field_content_section
     - field.field.node.landing_page.field_data_points_for_theme
     - field.field.node.landing_page.field_media_image
+    - field.field.node.landing_page.field_parline_link
     - field.field.node.landing_page.field_theme
     - image.style.max_1300x1300
     - node.type.landing_page
@@ -135,6 +136,15 @@ content:
             classes: {  }
     type: image
     region: content
+  field_parline_link:
+    type: entity_reference_revisions_entity_view
+    weight: 16
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_theme:
     type: entity_reference_rss_category
     weight: 0
@@ -148,4 +158,5 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  addtoany: true
   langcode: true
